tests/neg-macros/i25743/Test_2.scala
def test =
  Macro.foo[Int]() // error // error
